fix display cat margin top

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -37,7 +37,7 @@ header {
 }
 .display-cats {
   position: fixed;
-  margin-top: 5%;
+  margin-top: 8rem;
   height: 90%;
   display: flex;
   width: 100%;
